added pastor's picture, pending their Journey

--- a/about.html
+++ b/about.html
@@ -163,6 +163,28 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
         <div class="row featurette">
             <div class="col-md-12">
                 <h1 class="featurette col-md-12"><u>About<span class="text-muted"> Us</span></u></h1>
+                <section id="testing-core">
+                    <div class="col-md-6" style="height: 20%;">
+                        <img style="height: 500px;" class="featurette-image img-responsive center-block" src="assets/WondersPictures/daddyandmummypastor.jpg" alt="Pastor&Wife">
+                    </div>
+
+                    <div class="col-md-6 row">
+                        <h2>Our Core Values</h2>
+                        <div>
+                            <p>We have set ourselves a challenging brief, it is conscious. We will achieve a high standard in life and ministry as we individually and corporately commit ourselves to the following Core Values:</p>
+
+                            <p>&#x2714; To have fellowship with one another in love.</p>
+
+                            <p>&#x2714; To forgive one another and receive forgiveness.</p>
+
+                            <p>&#x2714; To exercise the gifts of the Spirit for the encouragement of the church.</p>
+
+                            <p>&#x2714; To give freely of both our time, and resources to the church, and the people of the church.</p>
+                        </div>
+
+                    </div>
+
+                </section>
                 <!-- Three columns of text below the carousel -->
                 <div class="row">
                     <div class="col-lg-4">
@@ -177,8 +199,13 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
                         <img class="img-square" src="assets/img/icons/mission.png" alt="Generic placeholder image" width="128" height="128">
                         <h2>Mission</h2>
                         <p>&#x2714; To make heaven.
+                            <br>&#x2714; To take as many people as possible with us.
                             <br>&#x2714; To have a member of RCCG in every family of all nations.
-                            <br>&#x2714; To bring back the souls that were lost to Christ, give sight to the spiritually blind, and comfort the brokenhearted through the living word of God by preaching Christ to every people of all race.
+                            <br>&#x2714; To accomplish No. 1 above, holiness will be our lifestyle.
+                            <br>&#x2714; To accomplish No. 2 and 3 above, we will plant churches within five minutes walking distance in every city and town of developing countries and within five minutes driving distance in every city and town of developed
+                            countries.
+
+
                         </p>
                         <p><a class="btn btn-default" href="http://rccg.org/who-we-are/mission-and-vision/" role="button">View details &raquo;</a></p>
                     </div>
@@ -188,13 +215,12 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
                         <h2>Our Vision</h2>
                         <p>At Wonders Assembly, we see God at work building transformed humanity.
                             <br>This great company of God's people will:
-                            <br>&#x2714; Live victoriously
+                            <br>&#x2714; Make holiness Our lifestyle.
 
-                            <br>&#x2714; Display Excellence in life
+                            <br>&#x2714; Plant Churches on every street in every city, town and communityin all nationsof the world.
 
-                            <br>&#x2714; Achieve Greatness in life
-                            <br>&#x2714; Access God's Reason for Creating them
-                            <br>&#x2714; Fulfill God's Calling upon their life
+                            <br>&#x2714; Pursue these objectives until everynation in the world is reached.
+
                         </p>
                         <p><a class="btn btn-default" href="http://rccg.org/who-we-are/our-beliefs/" role="button">View details &raquo;</a></p>
                     </div>
@@ -231,9 +257,10 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
             <!-- FOOTER -->
             <footer style="text-align: center;">
                 <!-- <p class="pull-right"><a href="#">Back to top</a></p> -->
-                <p>&copy; 2024 Redeemed Christian Church of God: Wonders Assembly Area, Lagos Province 22, Nigeria<br> &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+                <!-- <p>&copy; 2024 Redeemed Christian Church of God: Wonders Assembly Area, Lagos Province 22, Nigeria<br> &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
                 <p>__________________________________</p>
                 <nav style="display: flex; justify-content: space-around;"><a href="index.html">Home</a> <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="https://www.rccg.org/">RCCG Headquarters</a></nav>
+                <p>RCCG Wonders Assembly Area &copy; 2024
             </footer>
 
         </div>
