--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
                     <br> +234-708-650-4108
                     <br> wonders.assembly.area@gmail.com
                     <br><br>
-                    <b>Keep in touch for prayer requests, comments and others questions.</b>
+                    <b>Keep in touch for prayer requests, comments and others.</b>
                 </p>
             </div>
 
@@ -196,9 +196,11 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
         <!-- FOOTER -->
         <footer style="text-align: center;">
             <!-- <p class="pull-right"><a href="#">Back to top</a></p> -->
-            <p>&copy; 2024 Redeemed Christian Church of God: Wonders Assembly Area, Lagos province 22, Nigeria.<br> &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <!-- <p>&copy; 2024 Redeemed Christian Church of God: Wonders Assembly Area, Lagos province 22, Nigeria.<br> &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
             <p>__________________________________</p>
-            <nav style="display: flex; justify-content: space-around;"><a href="index.html">Home</a> <a href="#">About</a> <a href="contact.html">Contact</a> <a href="https://www.rccg.org/">RCCG Headquarters</a></nav>
+            <nav style="display: flex; justify-content: space-around;">
+                <a href="index.html">Home</a> <a href=" #">About</a> <a href="contact.htm l">Contact</a> <a href="https://www.rccg.org /">RCCG Headquarters</a></nav>
+            <p>RCCG Wonders Assembly Area &copy; 2024
         </footer>
 
     </div>
@@ -209,15 +211,15 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js "></script>
     <script>
-        window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')
+        window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js "><\/script>')
     </script>
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="dist/js/bootstrap.min.js "></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/vendor/holder.min.js"></script>
+    <script src="assets/js/vendor/holder.min.js "></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="assets/js/ie10-viewport-bug-workaround.js "></script>
 
 
 </body>
