--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
         <!-- START THE FEATURETTES -->
         <div class="row featurette">
             <div class="col-md-7">
-                <h2 class="featurette-heading">Bring Your Friends, and Family.
+                <h2 class="featurette-heading">Bring Your Family and Friends.
                 </h2>
                 <p class="lead indexparagraph">Every Sunday, join us for a transformative spiritual experience that goes beyond the confines of a typical service. At Wonders Assembly, we believe in nurturing not just your spirit but also your sense of community and well-being.</p>
             </div>
@@ -202,9 +202,10 @@ BOOSTRAP WEBSITE STYLES - FROM ONLINE RESOURCE (GOOGLE "BOOTSRAP") -->
         <!-- FOOTER -->
         <footer style="text-align: center;">
             <!-- <p class="pull-right"><a href="#">Back to top</a></p> -->
-            <p>&copy; 2024 Redeemed Christian Church of God: Wonders Assembly Area, Lagos Province 22, Nigeria<br> &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <!-- <p>&copy; 2024 Redeemed Christian Church of God: Wonders Assembly Area, Lagos Province 22, Nigeria<br> &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
             <p>__________________________________</p>
             <nav style="display: flex; justify-content: space-around; "><a href="index.html">Home</a> <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="https://www.rccg.org/">RCCG Headquarters</a></nav>
+            <p>RCCG Wonders Assembly Area &copy; 2024
         </footer>
 
     </div>
